# glucosphere

./: .databricksignore  .env.bundle.example  .gitignore  AGENTS.md  AGENT_DEPLOY_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  NOTICE.md  README.md  REPO_LAYOUT.md  TODO.md  databricks.yml  databricks.yml.example  deploy.py  pyproject.toml  test.md
.cursor/: hooks.json
.github/: dependabot.yml
App/: .env.example  DEPENDENCIES.md  README.md  deploy_glucosphere.py  index.html  package-lock.json  package.json  run_backend.sh  vite.config.js
Data_DataGen_ModelForecast/: 01_download_data.py  01_generate_synthetic_baseline.py  01_ingest_real_baseline.py  01_synthetic_baseline.py  02_ingest_real_baseline.py  02_parseNcombine_processed_data.py  03_compare_baseline_modes.py  03_extract_baselineTS_EDAcheck.py  04_CGM_PseudoGeneration_CleanData_Modeling.py  04_pseudo_data_forecast_modeling.py  04_pseudo_data_modeling.py  05_CGM_Incident_Inference_DeviceCalibrationBug.py  05_incident_inference_bidirectional.py  06_DeployModel_as_ServingEndpoint.py  06_incident_inference_single.py  07_deploy_serving_endpoints.py  08_genie_ka_mas.py  09_Create_Genie_KA_MAS.py  09_grant_app_permissions.py  10_Grant_App_Permissions.py  DEPENDENCIES.md  ExploreData4viz_app_devs.py  README.md  README_data.md  README_data_fidelity_baseline.md  dual_01_generate_synthetic_baseline.py  dual_01_ingest_real_baseline.py  dual_02_compare_baseline_modes.py  dual_04_CGM_PseudoGeneration_CleanData_Modeling.py  dual_05_CGM_Incident_Inference_DeviceCalibrationBug_Bidirectional.py  (+4 more)
(+393 files in other folders)
